# rustguard

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  SECURITY_IMPLEMENTATION_PLAN.md  authorization.md  casbin.http  test.http
.kilocode/: mcp.json
.kilocode/memory-bank/: brief.md
.kilocode/rules/: naming-conventions.md
docs/: README.md  casbin-authorization-patterns.md  frontend-authentication.md  in-memory-jwt-fingerprinting.md  jwt-fingerprinting-implementation.md  jwt.md
docs/ideas/: error_structure.md  plan_authorization.md
docs/redis/: redis-jwt-fingerprinting.md
migrations/: 20250902183109_create_users_table.up.sql  20250903183000_create_casbin_rule_table.up.sql
src/: lib_bin.rs  main.rs
src/casbin/: model.conf
src/config/: database.rs  logging.rs  mod.rs  parameter.rs
src/dto/: admin_dto.rs  mod.rs  policy_dto.rs  token_dto.rs  user_dto.rs
src/entity/: user.rs
src/error/: api_error.rs  authorization_error.rs  db_error.rs  mod.rs  request_error.rs  token_error.rs  user_error.rs
src/graphql/: context.rs  mod.rs  utils.rs
src/graphql/resolvers/: mod.rs  user_resolver.rs
src/graphql/schema/: mod.rs  mutation.rs  query.rs  subscription.rs
src/graphql/types/: common.rs  mod.rs  user.rs
src/handler/: admin_handler.rs  api_handler.rs  auth_handler.rs  graphql_handler.rs  health_handler.rs  mod.rs  permission_handler.rs  policy_handler.rs  profile_handler.rs  refresh_handler.rs  register_handler.rs  system_handler.rs
src/middleware/: auth.rs  authorization.rs  mod.rs  rate_limit.rs
src/repository/: user_repository.rs
src/response/: app_response.rs  mod.rs
src/routes/: admin.rs  api.rs  auth.rs  graphql.rs  health.rs  mod.rs  permissions.rs  policies.rs  profile.rs  register.rs  root.rs  system.rs
src/service/: casbin_service.rs  fingerprint_service.rs  mod.rs  refresh_token_service.rs  token_service.rs  user_service.rs
src/state/: auth_state.rs  casbin_state.rs  graphql_state.rs  mod.rs  token_state.rs  user_state.rs
tests/http/: basic.hurl  casbin.http  graphql-test.http  login.hurl  register.hurl  unit.http
