[package]
name = "framework"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "framework"
path = "src/main.rs"

[[bin]]
name = "setup-test-db"
path = "tests/bin/setup-test-db.rs"

[dependencies]
axum = "0.8.4"
hyper = { version = "1.7.0", features = ["full"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
dotenv = "0.15.0"
serde =  { version = "1.0.219", features = ["derive"] }
jsonwebtoken = "9.3.1"
thiserror = "2.0.16"
chrono = {version = "0.4.41", features = ["serde"]}
bcrypt = "0.17.1"
serde_json = "1.0.143"
rand = "0.8.5"
sha2 = "0.10.8"
base64 = "0.22.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "migrate", "chrono", "postgres", "time", "uuid"] }
validator = { version = "0.20.0", features = ["derive"] }
async-trait = "0.1.89"
sqlx-cli = "0.8.6"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["serde", "v7"] }
tracing = "0.1.41"
dashmap = "5.5.3"
once_cell = "1.19.0"
tokio-util = "0.7.16"
