[package]
name = "rustguard"
version = "0.1.0"
edition = "2024"
authors = ["ichadhr <ichadhr@gmail.com>"]
description = "A secure Rust web framework with JWT authentication, session fingerprinting, and RBAC authorization"
license = "MIT"
repository = "https://github.com/ichadhr/rustguard"
keywords = ["web", "api", "jwt", "authentication", "security"]
categories = ["web-programming", "authentication", "graphql"]

[[bin]]
name = "rustguard"
path = "src/main.rs"

[dependencies]
axum = "0.8.4"
hyper = { version = "1.7.0", features = ["full"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
dotenv = "0.15.0"
serde =  { version = "1.0.219", features = ["derive"] }
jsonwebtoken = "9.3.1"
thiserror = "2.0.16"
chrono = {version = "0.4.41", features = ["serde"]}
bcrypt = "0.17.1"
serde_json = "1.0.143"
rand = "0.8.5"
sha2 = "0.10.9"
base64 = "0.22.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "migrate", "chrono", "postgres", "time", "uuid"] }
sqlx-adapter = { version = "1.8.0", default-features = false, features = ["postgres", "runtime-tokio-native-tls"] }
validator = { version = "0.20.0", features = ["derive"] }
async-trait = "0.1.89"
sqlx-cli = "0.8.6"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["serde", "v7"] }
tracing = "0.1.41"
dashmap = "5.5.3"
once_cell = "1.21.3"
tokio-util = "0.7.16"
casbin = "2.10.1"
axum-casbin = "1.3.0"
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"
futures-util = "0.3.31"
sys-info = "0.9.1"
faster-hex = "0.10.0"

[package.metadata.cargo-machete]
ignored = ["sqlx-cli", "once_cell"]
